<resources>
    <string name="app_name">Hide&amp;Seek</string>
    <string name="hide">かくれんぼ</string>
    <string name="make">グループ作成</string>
    <string name="join">グループ参加</string>
    <string name="title">グループID入力</string>
    <string name="back">戻る</string>
    <string name="decide">決定</string>
    <string-array name="list">
        <item>10分</item>
        <item>15分</item>
        <item>20分</item>
        <item>25分</item>
        <item>30分</item>
    </string-array>
</resources>
